# tse-datalake-databrick

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: aws_ecr.yml
infra/: dev.auto.tfvars  ecr.tf  lambda.tf  s3.tf  vars.tf
src/: shared.py
src/bronze/: lambda_unzip.py  unzip.py
src/extract/: download.py  lambda_extract.py
src/pipeline/: orchestrator.py
