[project]
name = "projeto-tse"
version = "0.1.0"
description = "Projeto de ingestão e analise dos dados abertos do TSE"
authors = [
    {name = "Cleiton Silva",email = "cleitn1@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "requests (>=2.34.2,<3.0.0)",
    "boto3 (>=1.43.36,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false